# Book-Manager

./: .env  .gitignore  Cargo.toml  README.md  database.db
api/: Cargo.toml
api/src/: error.rs  filters.rs  lib.rs  permission.rs  routes.rs
api/src/handlers/: background.rs  index.rs  login.rs  logout.rs  mod.rs  search.rs
api/src/handlers/books/: delete.rs  detail.rs  edit.rs  list.rs  mod.rs  new.rs
api/src/handlers/borrow/: _return.rs  borrow.rs  list.rs  mod.rs
api/src/handlers/emails/: delete.rs  list.rs  mod.rs  read.rs  send.rs  sent_mail.rs
api/src/handlers/users/: delete.rs  detail.rs  list.rs  mod.rs  new.rs
api/static/css/: skeleton.css  style.css
api/templates/: index.html.tera  layout.html.tera  login.html.tera  macros.html.tera  search.html.tera
api/templates/books/: detail.html.tera  edit.html.tera  list.html.tera  new.html.tera
api/templates/borrow/: list.html.tera
api/templates/emails/: list.html.tera  read.html.tera  send.html.tera  sent_mail.html.tera
api/templates/error/: 404.html.tera
api/templates/users/: detail.html.tera  list.html.tera  register.html.tera
entity/: Cargo.toml
entity/src/: books.rs  borrowed_books.rs  emails.rs  lib.rs  post.rs  prelude.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs
migration/src/versions/: m001_create_books_table.rs  m002_create_users_table.rs  m003_create_borrowed_books_table.rs  m004_create_emails_table.rs  m005_create_email_messages_table.rs  mod.rs
service/: Cargo.toml
service/src/: lib.rs  mutation.rs  query.rs
service/tests/: mock.rs  prepare.rs
src/: main.rs
